[package]
name = "concert_broker"
version = "0.3.0"
authors = ["Ryc Brownrigg <ryc@Brownrigg.mt>"]
edition = "2021"
publish = false

[dependencies]
ink = { version = "5.1.1", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
inktix_core = { path = "../inktix_core", default-features = false }

[dev-dependencies]
ink_e2e = { version = "5.1.1" }

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "inktix_core/std",
]
ink-as-dependency = []
e2e-tests = []