[package]
name = "inktix"
version = "1.0.0"
authors = ["Ryc Brownrigg <ryc@Brownrigg.mt>"]
edition = "2021"
publish = false

[dependencies]
ink = { version = "5.1.1", default-features = false }

[dev-dependencies]
ink_e2e = { version = "5.1.1" }

[lib]
path = "src/lib.rs"

[features]
default = ["std", "sports", "concert"]
std = ["ink/std"]
ink-as-dependency = []
e2e-tests = []
sports = []
concert = []
