[package]
name = "sports_broker"
version = "0.2.0" # Sports Broker
authors = ["Ryc Brownrigg <ryc@Brownrigg.mt>"]
edition = "2021"
publish = false

[dependencies]
ink = { version = "=5.1.1", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
ink_e2e = "=5.1.1"

[lib]
name = "sports_broker"
path = "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []

# Enable this for testing
testing = []

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
overflow-checks = true

[profile.dev]
panic = "abort"
overflow-checks = true